Reinstate Kotlin inject test and add-opens required modules
Still not sure why they are required